<resources>

    //Bug fix
    <string name="todo">TODO</string>
    //------------------------------------


    <string name="app_name">ShariX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShariX</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_list">Equipment list</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="timeline">Timeline</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome to ShariX</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="test">Test</string>
    <string name="action_creators">Creators</string>
    <string name="action_profile">Profile</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Сancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_time">The timing of the reservation</string>
    <string name="text_f_name">FirstName</string>
    <string name="text_s_name">SecondName</string>
    <string name="text_number">Number</string>
    <string name="text_task_list">Task list</string>
    <string name="text_creators">Creators</string>
    <string name="text_choose_d">Choose a date</string>
    <string name="text_news">News</string>
    <string name="text_create_acc">Create Account</string>
    <string name="title_activity_profile">Your profile</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_creators">Creators</string>
    <string name="subscriptions_ttl">Subscriptions</string>
    <string name="home_ttl">Home</string>
    <string name="my_ttl">My</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rating_text">Rating</string>
    <string name="e_mail">E-mail</string>
    <string name="type_of_activity">Type of activity</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="enter_password">Enter Password</string>
    <string name="already_registered_nclick_her_to_login">Already registered? Click her to login</string>
    <string name="register_user">Register User</string>
    <string name="enter_email">Enter email</string>
    <string name="password">password</string>
    <string name="enter_username">Enter username</string>


</resources>
