<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:enabled="true" android:visible="true">

        <item
                android:id="@+id/nav_co_list"
                android:icon="@drawable/ic_import_contacts_black_24dp"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_eql"
                android:icon="@drawable/ic_desktop_windows_black_24dp"
                android:title="@string/equipment_list"/>
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_map_black_24dp"
                android:title="@string/map"/>
        <item
                android:id="@+id/nav_timeL"
                android:icon="@drawable/ic_view_comfy_black_24dp"
                android:title="@string/timeline"/>

    </group>

</menu>
