<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_profile"
        tools:context=".Menu.ProfileActivity"
        android:background="@color/colorAccent">

    <ImageView
            android:layout_width="119dp"
            android:layout_height="151dp" tools:srcCompat="@tools:sample/avatars[3]"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/text_f_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="18sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.41"
            app:layout_constraintVertical_bias="0.014" android:typeface="normal" android:textAllCaps="false"
    />
    <ImageView
            android:layout_width="261dp"
            android:layout_height="28dp" app:srcCompat="@drawable/line"
            android:id="@+id/imageView3"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/rating_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.007"/>
    <TextView
            android:text="@string/e_mail"
            android:layout_width="160dp"
            android:layout_height="26dp"
            android:textSize="18sp"
            android:id="@+id/textView4" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/type_of_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/textView6" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="408dp"
            tools:layout_editor_absoluteX="76dp" android:id="@+id/button3"/>
</android.support.constraint.ConstraintLayout>